# gitea-pika-welcome

./: Cargo.toml  LICENSE  Makefile  README.md  main.sh  makepot
.github/: github_pushback.sh
.github/workflows/: github-pushback.yml  release.yml
data/: com.github.pikaos-linux.pikafirstsetup.desktop  com.github.pikaos-linux.pikafirstsetup.gschema.xml  com.github.pikaos-linux.pikafirstsetup.xml  com.github.pikaos-linux.pikawelcome.desktop  com.github.pikaos-linux.pikawelcome.gschema.xml  org.cosmicfusion.example.desktop  org.cosmicfusion.example.xml  pika-welcome-autostart.desktop
data/config/: community.json  contribute.json  credits.json  look_and_feel.json  recommended_addons.json  setup_steps.json  translators.json  troubleshoot.json
data/scripts/: check-pkg.sh  codec.sh  driver-manager.sh  pika-sudo.sh  software-manager.sh  update-manager.sh
debian/: changelog  control  rules
locales/: bg_BG.json  cs.json  de_DE.json  en_US.json  es_ES.json  fr_FR.json  it_IT.json  kab.json  nl_NL.json  sv_SE.json  tr_TR.json
po/: bg.po  de.po  en_US.po  fr.po  it.po  sv.po
src/: build_ui.rs  config.rs  connection_check.rs  main.rs  save_window_size.rs  style.css
src/first_setup/: codec_carousel.rs  driver_carousel.rs  first_setup.rs  gameutils_carousel.rs  initial_carousel.rs  internet_carousel.rs  mod.rs  update_carousel.rs  user_carousel.rs
src/first_setup/codec_carousel/: mod.rs
src/first_setup/driver_carousel/: mod.rs
src/first_setup/final_carousel/: mod.rs
src/save_window_size/: mod.rs
src/welcome_content_page/: mod.rs
(+12 files in other folders)
