[package]
name = "pika-first-setup-gtk4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5.3", package = "libadwaita", features = ["v1_4"] }
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
async-channel = "2.1.1"
regex = "1.10.3"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
duct = "0.13.7"
os_pipe = "1.1.5"
user = "0.1.1"
users = "0.11.0"
